k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80         # Port exposed externally
      targetPort: 4499 # Port used internally in the container
  type: LoadBalancer
