k8s/wisecow-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - 4.174.216.32.nip.io  # Replace with your temporary domain
    secretName: wisecow-tls # Ensure you have a secret for TLS
  rules:
  - host: 4.174.216.32.nip.io # Replace with your temporary domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 80
